--- a/Features/pom.xml
+++ b/Features/pom.xml
@@ -25,17 +25,16 @@
     -->
 
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>Feature</artifactId>
-    <packaging>feature</packaging>
-
-    <name>Feature-feature</name>
-    <description>Feature details</description>
-
+    <artifactId>Features</artifactId>
+    <name>Features-feature</name>
+    <description>Features details</description>
     <dependencies>
-        <!-- add the artifact that should be in the feature in the dependencies set -->
+        <dependency>
+        <groupId>com.launchclub</groupId>
+        <artifactId>view</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </dependency>
     </dependencies>
-
     <build>
         <pluginManagement>
             <plugins>
@@ -51,7 +50,15 @@
             <plugin>
                 <groupId>org.apache.karaf.tooling</groupId>
                 <artifactId>karaf-maven-plugin</artifactId>
-
+                <executions>
+                    <execution>
+                        <id>generate</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>features-generate-descriptor</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <startLevel>50</startLevel>
                     <aggregateFeatures>true</aggregateFeatures>
@@ -63,5 +70,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
