--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -48,8 +48,15 @@
             <artifactId>osgi.core</artifactId>
             <version>${osgi.version}</version>
             <scope>provided</scope>
+
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.28</version>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
