--- a/adminrole/pom.xml
+++ b/adminrole/pom.xml
@@ -35,11 +35,13 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.example</groupId>
-            <artifactId>authentication</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.service.component.annotations</artifactId>
+            <version>1.5.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
