--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -42,12 +42,18 @@
         </dependency>
         <dependency>
             <groupId>org.example</groupId>
-            <artifactId>adminrole</artifactId>
+            <artifactId>usersrole</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.service.component.annotations</artifactId>
+            <version>1.5.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.example</groupId>
-            <artifactId>usersrole</artifactId>
+            <artifactId>adminrole</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
