--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,10 @@
         <module>dao</module>
         <module>authentication</module>
         <module>view</module>
-        <module>samplefeature1</module>
         <module>exception</module>
         <module>adminrole</module>
         <module>usersrole</module>
+        <module>chatfeature</module>
     </modules>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
